flask added typo fix

--- a/one/flask/flask-deployment.yaml
+++ b/one/flask/flask-deployment.yaml
@@ -16,7 +16,7 @@ spec:
       labels:
         app: hello-app
     spec:
-      imagePullSecret:
+      imagePullSecrets:
       - name: regcred
       containers:
       - name: hello-deployment
